[package]
name = "staxping"
version = "0.2.2"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"
surge-ping = "0.8"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
socket2 = "0.5"

windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_Dns",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_WindowsProgramming"
] }
get_if_addrs = "0.5.3"

[[bin]]
name = "staxping"
path = "src/main.rs"
