[package]
name = "staxping"
version = "2.0.0"
edition = "2021"
description = "Clean, unified network diagnostics CLI"
license = "MIT"
repository = "https://github.com/StaxDash/StaxPing"

[[bin]]
name = "staxping"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
